[tool.poetry]
name = "allennlp"
version = "0.1.0"
description = "An open-source NLP research library, built on PyTorch. Modified to install properly."
authors = ["Allen Institute for Artificial Intelligence <allennlp@allenai.org>", "Yuval Weiss"]
readme = "README.md"
exclude=[
            "*.tests",
            "*.tests.*",
            "tests.*",
            "tests",
            "test_fixtures",
            "test_fixtures.*",
            "benchmarks",
            "benchmarks.*",
        ]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2"
scipy = "^1.13"
spacy = "^3.7"
torch = "^2.5.1"
torchvision = "^0.20.1"
fairscale = "^0.4.13"
jsonnet = "^0.20.0"
nltk = "^3.9.1"
tensorboardx = "^2.6.2.2"
h5py = "^3.12.1"
scikit-learn = "^1.6.0"
pytest = "^8.3.4"
transformers = "^4.47.0"
sentencepiece = "^0.2.0"
wandb = "^0.19.1"
huggingface-hub = "^0.26.5"
lmdb = "^1.5.1"
more-itertools = "^10.5.0"
termcolor = "^2.5.0"
dill = "^0.3.9"
base58 = "^2.1.1"
cached_path = "^1.6.5"
traitlets = "^5.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
allennlp = "allennlp.__main__:run"